<resources>
    <string name="app_name">JustPlay</string>
    <string name="token_error">登录凭证过期,请重新登录</string>
    <string name="please_wait">请稍等...</string>

    <string name="edit_input_email">请输入邮箱</string>
    <string name="edit_input_psd">请输入登录密码,不少于6位</string>
    <string name="edit_input_psd_again">请再输入一次密码</string>
    <string name="edit_input_phone_again">请输入手机号码</string>
    <string name="edit_input_code_again">请输入验证码</string>
    <string name="txt_get_code">获取验证码</string>
    <string name="txt_bind_phone">绑定手机号</string>
    <string name="txt_bind_phone_tips">*如果您拥有中国手机号请进行绑定,方便更好的通过教师审核</string>
    <string name="txt_skip">跳过</string>
    <string name="txt_storage_time">保存时间</string>


    <string name="try_to_play_msg">《try to play 用户注册协议》</string>
    <string name="txt_register">注  册</string>
    <string name="txt_submit">提  交</string>
    <string name="txt_register_more">更多注册方式</string>

    <string name="txt_forgetpsd">忘记密码</string>
    <string name="txt_log">立 即 登 录</string>
    <string name="txt_goto_register">没有账号,去注册 ></string>

    <string name="apply_lession">申请公开课</string>
    <string name="apply_withdraw">申 请 提 现</string>

    <string name="radio_text1">预定课程</string>
    <string name="radio_text2">预定陪练</string>
    <string name="radio_text3">我的时间</string>
    <string name="radio_text4">我的钱包</string>
    <string name="radio_text5">个人中心</string>

    <string name="time_remain">剩余可约课时</string>
    <string name="time_total">累计释放的课时数</string>

    <string name="wallet_total_withdraw">累计提现金额:</string>
    <string name="wallet_withdraw_money">提现中金额:</string>
    <string name="wallet_withdraw_provider">可提取的金额:</string>
    <string name="wallet_withdraw_current">本次提现的金额:</string>
    <string name="wallet_withdraw_way">提现方式:</string>
    <string name="wallet_withdraw_bank">银行开户行:</string>
    <string name="wallet_withdraw_bank_name">银行开户名称:</string>
    <string name="wallet_withdraw_bank_phone">银行开户预留手机号:</string>
    <string name="wallet_withdraw_card">银行卡号:</string>

    <string name="money">现金</string>
    <string name="operate_record">操作记录</string>
    <string name="look_history">查看历史</string>
    <string name="averager">平均分</string>
    <string name="score">分</string>

    <string name="total">总体</string>
    <string name="skill">技巧</string>
    <string name="proficient">熟练</string>
    <string name="emotion">感情</string>
    <string name="serious">认真</string>

    <string name="audio_comment">语音评价</string>
    <string name="click_gift_star">点击赠送一颗小星星</string>
    <string name="makesure_star">确认赠送小星星吗?</string>
    <string name="send_star_complete">已将小星星送到该学生账户中,谢谢老师</string>

    <string name="btn_submit_score">提 交 打 分</string>

    <string name="txt_reverse">预定:</string>
    <string name="txt_level">级别:</string>

    <string name="txt_send_remind">发送提醒给上传资料学生</string>
    <string name="txt_storage_pic">保存资料到相册</string>
    <string name="txt_print_file">打印资料</string>
    <string name="txt_print_lesson">打印课表</string>

    <string name="txt_cancel_course">取消课程</string>

    <string name="btn_time_45_mode">45分钟模式</string>
    <string name="btn_time_30_mode">30分钟模式</string>

    <string name="txt_select_course">可选课时</string>
    <string name="txt_select_coursetime">选择上课时间</string>

    <string name="txt_not_submit_msg">您还没有提交教师资料</string>
    <string name="txt_submit_msg_updata">更新资料进行审核</string>
    <string name="txt_submit_msg_teachtime_setting">设置授课时间</string>
    <string name="txt_submit_msg_playtime_setting">设置陪练时间</string>

    <string name="txt_all">全部</string>

    <string name="txt_time_already_lesson">已上课时:</string>
    <string name="txt_total_score">总体分数:</string>

    <string name="txt_edit_msg">编辑资料</string>

    <string name="txt_my_item_course">预定课程</string>
    <string name="txt_my_item_mytime">我的时间</string>
    <string name="txt_my_item_completedcourse">已上课程</string>
    <string name="txt_my_item_score">我的评分</string>
    <string name="txt_my_item_prepractice">预定陪练</string>
    <string name="txt_my_item_wallet">钱包</string>
    <string name="txt_my_item_star">小星星</string>
    <string name="txt_my_item_publiccourse">公开课</string>

    <string name="txt_delete">删除</string>
    <string name="txt_person_name">姓名 :</string>
    <string name="txt_person_phone">电话 :</string>
    <string name="txt_person_email">邮箱 :</string>
    <string name="txt_person_age">年龄 :</string>
    <string name="txt_person_tech_school">执教学校 :</string>
    <string name="txt_person_gra_school">毕业学校 :</string>
    <string name="txt_person_country">国家 :</string>
    <string name="txt_person_tech_time">任教时长 :</string>
    <string name="txt_person_upload_license">上传执照</string>
    <string name="txt_updata">更新</string>
    <string name="txt_person_edit_head">编辑头像</string>
    <string name="txt_person_ifnot_tech_license">是否教师执照</string>
    <string name="txt_person_ifnot_person_perform">是否个人独奏</string>
    <string name="txt_person_upload_video">上传视频</string>
    <string name="txt_person_recommend_name">推荐人姓名 :</string>
    <string name="txt_person_upload_recommend_letter">上传推荐信 :</string>
    <string name="txt_person_select_file">选择文件</string>
    <string name="txt_person_upload_thing">上传事例?</string>
    <string name="txt_person_upload_idcard">上传身份证 :</string>
    <string name="txt_person_idcard_num">身份证号码 :</string>
    <string name="txt_person_passport_num">护照号码 :</string>
    <string name="txt_person_upload_passport">上传护照 :</string>
    <string name="txt_person_input_idcard">请输入身份证号码</string>
    <string name="txt_person_input_passport">请输入护照号码</string>
    
    
    <!--line_txt-->
    <string name="line_txt_centificate">证书</string>
    <string name="line_txt_file_video">作品视频</string>
    <string name="line_txt_file_other">其他作品视频</string>
    <string name="line_txt_msg_recommend">推荐人信息</string>
    <string name="line_txt_msg_card">证件信息</string>
    <string name="line_txt_msg_passport">护照信息</string>
    <string name="line_txt_msg_comment">老师评价学生</string>
    <string name="line_txt_msg_gift">赠予情况</string>
    <string name="line_txt_course_wait">初级课程待上</string>
    <string name="line_txt_cash">现金</string>
    <string name="line_txt_operate_record">操作记录</string>
    <string name="line_txt_stu_book">学生曲谱</string>
    <string name="line_txt_selectecd_time">选择上课时间</string>
    <string name="line_txt_selectecd_coursetime">可选课时</string>

    <string name="txt_yes">是</string>
    <string name="txt_no">否</string>
</resources>
