<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_techer"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/login_logo" />

        <EditText
            android:id="@+id/edit_input_phone"
            style="@style/edit_log"
            android:layout_marginTop="@dimen/margin_nor"
            android:drawableLeft="@mipmap/icon_phone"
            android:hint="@string/edit_input_phone_again" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_code"
                style="@style/edit_log"
                android:drawableLeft="@mipmap/icon_code"
                android:hint="@string/edit_input_code_again" />

            <TextView
                android:id="@+id/txt_validCode"
                style="@style/text_nor_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/edit_code"
                android:layout_centerVertical="true"
                android:text="@string/txt_get_code"
                android:textColor="@color/color_main" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_psd"
            style="@style/edit_log"
            android:drawableLeft="@mipmap/icon_pwd"
            android:hint="@string/edit_input_psd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/edit_log"
            android:drawableLeft="@mipmap/icon_email"
            android:hint="@string/edit_input_email" />

        <CheckBox
            android:id="@+id/checkbox_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_nor_20dp"
            android:button="@drawable/bg_checkbox"
            android:checked="true"
            android:text="@string/try_to_play_msg"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_normal" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_nor_30dp"
            android:background="@mipmap/bg_big_btn"
            android:gravity="center"
            android:minWidth="300dp"
            android:text="@string/txt_register"
            android:textColor="@color/color_main"
            android:textSize="@dimen/font_size_bigger" />

    </LinearLayout>
</ScrollView>
